--- a/index.html
+++ b/index.html
@@ -57,18 +57,18 @@
             <div class="is-size-5 publication-authors">
               <!-- Paper authors -->
               <span class="author-block">
-                <a href="https://github.com/WxuanYuan" target="_blank">Weixuan Yuan*<sup>1</sup></a>,</span>
+                <a href="https://github.com/WxuanYuan" target="_blank">Weixuan Yuan<sup>1</sup></a>,</span>
                 <span class="author-block">
                 <a href="https://cvg.cit.tum.de/members/khamuham" target="_blank">Qadeer Khan<sup>1,2</sup></a>,</span>
                 <span class="author-block">
                 <a href="https://cvg.cit.tum.de/members/golkov" target="_blank">Vladimir Golkov<sup>1,2</sup></a>,</span>
                 <span class="author-block">
-                <a href="https://cvg.cit.tum.de/members/cremers" target="_blank">Daniel Cremers<sup>1,2,3</sup></a></span>
+                <a href="https://cvg.cit.tum.de/members/cremers" target="_blank">Daniel Cremers<sup>1,2</sup></a></span>
             </div>
 
             <div class="is-size-5 publication-authors">
               <span class="author-block">
-                Technical University of Munich<sup>1</sup>, Munich Center for Machine Learning<sup>2</sup>, University of Oxford<sup>3</sup>
+                Technical University of Munich<sup>1</sup>, Munich Center for Machine Learning<sup>2</sup><sup>3</sup>
                 <!-- <br>IEEE International Conference on Intelligent Transportation Systems ITSC 2023 -->
               </span>
               <!-- <span class="eql-cntrb"><small><br><sup>*</sup>Indicates Equal Contribution</small></span> -->
@@ -102,17 +102,17 @@
 <!--                </a>-->
 <!--              </span>-->
 
-              <!-- Github link -->
-              <!-- TODO: change repository -->
-              <span class="link-block">
-                <a href="https://github.com/WxuanYuan" target="_blank"
-                class="external-link button is-normal is-rounded is-dark">
-                <span class="icon">
-                  <i class="fab fa-github"></i>
-                </span>
-                <span>Code</span>
-                </a>
-              </span>
+<!--              &lt;!&ndash; Github link &ndash;&gt;-->
+<!--              &lt;!&ndash; TODO: change repository &ndash;&gt;-->
+<!--              <span class="link-block">-->
+<!--                <a href="https://github.com/WxuanYuan" target="_blank"-->
+<!--                class="external-link button is-normal is-rounded is-dark">-->
+<!--                <span class="icon">-->
+<!--                  <i class="fab fa-github"></i>-->
+<!--                </span>-->
+<!--                <span>Code</span>-->
+<!--                </a>-->
+<!--              </span>-->
 
               <!-- WebUI link -->
               <!-- TODO: change link and host webUI -->
