--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
             <div class="is-size-5 publication-authors">
               <span class="author-block">
-                Technical University of Munich<sup>1</sup>, Munich Center for Machine Learning<sup>2</sup><sup>3</sup>
+                Technical University of Munich<sup>1</sup>, Munich Center for Machine Learning<sup>2</sup>
                 <!-- <br>IEEE International Conference on Intelligent Transportation Systems ITSC 2023 -->
               </span>
               <!-- <span class="eql-cntrb"><small><br><sup>*</sup>Indicates Equal Contribution</small></span> -->
