--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
               <!-- WebUI link -->
               <!-- TODO: change link and host webUI -->
               <span class="link-block">
-                <a href="https://huggingface.co/spaces/WeixuanYuan/DiffuSynth" target="_blank"
+                <a href="https://huggingface.co/spaces/WeixuanYuan/DiffuSynthV0.2" target="_blank"
                 class="external-link button is-normal is-rounded is-dark">
                 <span class="icon">
                   <i class="fab fa-github"></i>
@@ -223,7 +223,7 @@
     <div class="columns is-centered">
       <div class="column is-four-fifths">
       <p>
-        A Gradio webapp implementing the workflow above is hosted <a href="https://huggingface.co/spaces/WeixuanYuan/DiffuSynth" target="_blank">here</a>.
+        A Gradio webapp implementing the workflow above is hosted <a href="https://huggingface.co/spaces/WeixuanYuan/DiffuSynthV0.2" target="_blank">here</a>.
       </p>
       </div>
     </div>
