--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
     <div class="columns is-centered">
       <div class="column is-four-fifths">
       <p>
-        A Gradio webapp implementing the workflow above is hosted <a href="https://huggingface.co/spaces/WeixuanYuan/DiffuSynthV0.2" target="_blank">here</a>.
+        A Gradio webapp implementing the workflow above is hosted <a href="https://huggingface.co/spaces/WeixuanYuan/DiffuSynthV0.2" target="_blank">here</a>. (It may take some time to load.)
       </p>
       </div>
     </div>
