--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
   <meta charset="utf-8">
   <!-- Meta tags for social media banners, these should be filled in appropriatly as they are your "business card" -->
   <!-- Replace the content tag with appropriate information -->
-  <meta name="description" content="Assisting Musicians with Generation of Musical Notes using a Text-Guided Diffusion Model">
-  <meta property="og:title" content="Assisting Musicians with Generation of Musical Notes using a Text-Guided Diffusion Model"/>
-  <meta property="og:description" content="Project page for Assisting Musicians with Generation of Musical Notes using a Text-Guided Diffusion Model"/>
+  <meta name="description" content="Generation of Musical Timbres using a Text-Guided Diffusion Model">
+  <meta property="og:title" content="Generation of Musical Timbres using a Text-Guided Diffusion Model"/>
+  <meta property="og:description" content="Project page for Generation of Musical Timbres using a Text-Guided Diffusion Model"/>
   <!-- TODO: change this -->
   <meta property="og:url" content="https://yininghase.github.io/multi-agent-control/"/>
   <!-- Path to banner image, should be in the path listed below. Optimal dimenssions are 1200X630-->
@@ -21,11 +21,11 @@
   <!-- <meta name="twitter:image" content="images/overview.jpg"> -->
   <!-- <meta name="twitter:card" content="summary_large_image"> -->
   <!-- Keywords for your paper to be indexed by-->
-  <meta name="keywords" content="Assisting Musicians with Generation of Musical Notes using a Text-Guided Diffusion Model">
+  <meta name="keywords" content="Generation of Musical Timbres using a Text-Guided Diffusion Model">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
 
-  <title>Assisting Musicians with Generation of Musical Notes using a Text-Guided Diffusion Model</title>
+  <title>Generation of Musical Timbres using a Text-Guided Diffusion Model</title>
   <link rel="icon" type="image/x-icon" href="static/images/favicon.icon">
   <link href="https://fonts.googleapis.com/css?family=Google+Sans|Noto+Sans|Castoro"
   rel="stylesheet">
@@ -57,7 +57,7 @@
       <div class="container is-max-desktop">
         <div class="columns is-centered">
           <div class="column has-text-centered">
-            <h1 class="title is-1 publication-title">Assisting Musicians with Generation of Musical Notes using a Text-Guided Diffusion Model</h1>
+            <h1 class="title is-1 publication-title">Generation of Musical Timbres using a Text-Guided Diffusion Model</h1>
             <div class="is-size-5 publication-authors">
               <!-- Paper authors -->
               <span class="author-block">
@@ -66,8 +66,6 @@
                 <a href="https://cvg.cit.tum.de/members/khamuham" target="_blank">Qadeer Khan<sup>1,2</sup></a>,</span>
                 <span class="author-block">
                 <a href="https://cvg.cit.tum.de/members/golkov" target="_blank">Vladimir Golkov<sup>1,2</sup></a>,</span>
-                <span class="author-block">
-                <a href="https://cvg.cit.tum.de/members/cremers" target="_blank">Daniel Cremers<sup>1,2</sup></a></span>
             </div>
 
             <div class="is-size-5 publication-authors">
@@ -106,17 +104,17 @@
 <!--                </a>-->
 <!--              </span>-->
 
-<!--              &lt;!&ndash; Github link &ndash;&gt;-->
-<!--              &lt;!&ndash; TODO: change repository &ndash;&gt;-->
-<!--              <span class="link-block">-->
-<!--                <a href="https://github.com/WxuanYuan" target="_blank"-->
-<!--                class="external-link button is-normal is-rounded is-dark">-->
-<!--                <span class="icon">-->
-<!--                  <i class="fab fa-github"></i>-->
-<!--                </span>-->
-<!--                <span>Code</span>-->
-<!--                </a>-->
-<!--              </span>-->
+              <!-- Github link -->
+              <!-- TODO: change repository -->
+              <span class="link-block">
+                <a href="https://github.com/WxuanYuan/diffusynth" target="_blank"
+                class="external-link button is-normal is-rounded is-dark">
+                <span class="icon">
+                  <i class="fab fa-github"></i>
+                </span>
+                <span>Code</span>
+                </a>
+              </span>
 
               <!-- WebUI link -->
               <!-- TODO: change link and host webUI -->
@@ -185,11 +183,9 @@
       <div class="column is-four-fifths">
         <h2 class="title is-3">Abstract</h2>
         <div class="content has-text-justified">
-          <p>In recent years, text-to-audio systems have achieved remarkable success, enabling the generation of complete audio segments, directly from text descriptions. While these systems also facilitate music creation for general users, they often limit human creativity and deliberate expression for artists and musicians.</p>
-
-          <p>In contrast, this work allows composers and arrangers to create the basic building blocks for music creation: <i>Musical Notes</i>.</p>
-
-          <p>We introduce a system that combines a latent diffusion model and multi-modal contrastive learning to generate the musical notes conditioned on text descriptions. The diffusion model additionally allows the composer to manipulate the timbre of the note as desired.</p>
+          <p>In recent years, text-to-audio systems have achieved remarkable success, enabling the generation of complete audio segments, directly from text descriptions. While these systems also facilitate music creation for general users, they often limit human creativity and deliberate expression for artists and musicians.
+In contrast, this work allows composers, arrangers, and performers to create the basic building blocks for music creation: audio of individual musical notes for use in electronic instruments and DAWs. Through text prompts, the user can specify the timbre characteristics of the audio.
+We introduce a system that combines a latent diffusion model and multi-modal contrastive learning to generate musical timbres conditioned on text descriptions. By jointly generating the magnitude and phase of the spectrogram, our method eliminates the need for subsequently running a phase retrieval algorithm, as related methods do.
         </div>
       </div>
     </div>
